# screen_scraper

./: .gitignore  README.md
app/backend/: pyproject.toml
app/backend/app/: config.py  main.py
app/backend/app/services/: document_service.py  event_ledger.py  export_service.py  ollama_provider.py  snapshot_service.py  source_library_service.py  source_reference_service.py
app/frontend/: index.html  package.json
config/: app.example.yaml  providers.example.yaml
docs/: active-outline-and-section-prompts-v1.md  backend-engine-alignment-v1.md  backend-research-integration-v1.md  backend-service-boundaries-v1.md  command-and-action-registry-v1.md  component-inventory-v1.md  development-readiness-gate-v1.md  document-media-layout-and-generation-v1.md  editor-context-and-application-menu-v1.md  editor-engine-evaluation-v1.md  event-ledger-and-snapshots-v1.md  export-egress-contract-v1.md  inserted-item-metadata-approval-v1.md  license-and-rights-metadata-v1.md  local-environment-aries.md  mvp-runtime-loop-v1.md  refactor-work-index-v1.md  remote-development-quality-gate-v1.md  screen-scraper-bounded-radial-evidence-adapter-v1.md  screen-scraper-egress-adapter-contract-v1.md  security-and-secrets-policy.md  snapshot-restore-safety-contract-v1.md  story-spine-and-storyboard-system-v1.md  ui-composition-contract-v1.md  word-processor-requirements-v1.md  xi-io-dependency-readiness-assessment-v1.md
docs/components/: active-outline.md  chat-composer.md  document-canvas.md  metadata-review-panel.md  (+2 more)
scripts/: check.sh  dev-backend.sh  dev-frontend.sh  smoke.sh
(+48 files in other folders)
